--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,7 +8,49 @@
     <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
+
 <body>
-    
+    <header>
+        <div class="nav-bar container">ù
+
+            <!-- Categorie -->
+
+            <ul>
+                <li><a href="#"></a></li>
+                <li><a href="#"></a></li>
+                <li><a href="#"></a></li>
+            </ul>
+
+            <!-- Logo -->
+
+            <img src="" alt="">
+
+            <!-- Icone sezioni -->
+
+            <i></i>
+            <i></i>
+            <i></i>
+
+        </div>
+    </header>
+
+    <main>
+        <div class="container">
+
+            <!-- Card -->
+            <div class="row">
+                <div class="col">
+                    <img src="" alt="">
+                </div>
+            </div>
+        </div>
+    </main>
+
+    <footer>
+        <div class="footer-left"></div>
+        <div class="footer-right"></div>
+    </footer>
+
 </body>
+
 </html>
