--- a/index.html
+++ b/index.html
@@ -5,31 +5,36 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="GiovanniZumbo">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
+        integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="css/style.css">
     <title>Document</title>
 </head>
 
 <body>
-    <header>
-        <div class="nav-bar container">ù
+    <header class="white">
+        <div class="nav-bar container flex">
 
             <!-- Categorie -->
 
-            <ul>
-                <li><a href="#"></a></li>
-                <li><a href="#"></a></li>
-                <li><a href="#"></a></li>
+            <ul class="flex">
+                <li><a href="#"></a>Donna</li>
+                <li><a href="#"></a>Uomo</li>
+                <li><a href="#"></a>Bambini</li>
             </ul>
 
             <!-- Logo -->
 
-            <img src="" alt="">
+            <img src="img/boolean-logo.png" id="logo" alt="Booleanlogo">
 
             <!-- Icone sezioni -->
 
-            <i></i>
-            <i></i>
-            <i></i>
+            <div class="nav-icons">
+                <i class="fa-regular fa-user"></i>
+                <i class="fa-regular fa-heart"></i>
+                <i class="fa-solid fa-bag-shopping"></i>
+            </div>
 
         </div>
     </header>
