added first img

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
             <!-- Categorie -->
 
-            <ul class="flex">
+            <ul class="nav-sections flex">
                 <li><a href="#"></a>Donna</li>
                 <li><a href="#"></a>Uomo</li>
                 <li><a href="#"></a>Bambini</li>
@@ -35,17 +35,28 @@
                 <i class="fa-regular fa-heart"></i>
                 <i class="fa-solid fa-bag-shopping"></i>
             </div>
-
         </div>
     </header>
 
     <main>
         <div class="container">
-
             <!-- Card -->
-            <div class="row">
+            <div class="row flex">
                 <div class="col">
-                    <img src="" alt="">
+                    <div class="card">
+                        <img src="img/1.webp" alt="img.1">
+
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card">
+                        <img src="" alt="img.1">
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card">
+                        <img src="" alt="img.1">
+                    </div>
                 </div>
             </div>
         </div>
