--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
             <!-- Categorie -->
 
-            <ul class="nav-sections flex">
+            <ul class="nav-sections flex bold-white">
                 <li><a href="#"></a>Donna</li>
                 <li><a href="#"></a>Uomo</li>
                 <li><a href="#"></a>Bambini</li>
@@ -45,20 +45,36 @@
                 <div class="col">
                     <div class="card">
                         <img src="img/1.webp" alt="img.1">
+                        <div class="badge">
+                            <span class="discount bold-white">-50%</span>
+                            <span class="sust bold-white">Sostenibilità</span>
+                        </div>
+                        <div class="favourite">
+                            <i class="fa-solid fa-heart"></i>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card">
+                        <img src="img/1.webp" alt="img.1">
+                        <div class="badge">
+                            <span class="discount">-50%</span>
+                            <span class="Sust">Sostenibilità</span>
+                        </div>
+
 
                     </div>
                 </div>
                 <div class="col">
                     <div class="card">
-                        <img src="" alt="img.1">
+                        <img src="img/1.webp" alt="img.1">
                     </div>
                 </div>
-                <div class="col">
-                    <div class="card">
-                        <img src="" alt="img.1">
-                    </div>
-                </div>
+
+
+
             </div>
+        </div>
         </div>
     </main>
 
