--- a/index.html
+++ b/index.html
@@ -53,25 +53,103 @@
                             <i class="fa-solid fa-heart"></i>
                         </div>
                     </div>
+                    <div class="card-footer">
+                        <p class="brand txt-s">Levi's</p>
+                        <p class="name bold">RELAXED FIT TEE UNISEX</p>
+                        <span class="new-price bold txt-s">14,99€</span>
+                        <span class="orig-price txt-s">29,99€</span>
+                    </div>
                 </div>
                 <div class="col">
                     <div class="card">
-                        <img src="img/1.webp" alt="img.1">
+                        <img src="img/2.webp" alt="img.2">
                         <div class="badge">
-                            <span class="discount">-50%</span>
-                            <span class="Sust">Sostenibilità</span>
+                            <span class="discount bold-white">-50%</span>
+                            <span class="sust bold-white">Sostenibilità</span>
                         </div>
-
-
+                        <div class="favourite">
+                            <i class="fa-solid fa-heart"></i>
+                        </div>
+                    </div>
+                    <div class="card-footer">
+                        <p class="brand txt-s">Levi's</p>
+                        <p class="name bold">RELAXED FIT TEE UNISEX</p>
+                        <span class="new-price bold txt-s">14,99€</span>
+                        <span class="orig-price txt-s">29,99€</span>
                     </div>
                 </div>
                 <div class="col">
                     <div class="card">
-                        <img src="img/1.webp" alt="img.1">
+                        <img src="img/3.webp" alt="img.3">
+                        <div class="badge">
+                            <span class="discount bold-white">-50%</span>
+                            <span class="sust bold-white">Sostenibilità</span>
+                        </div>
+                        <div class="favourite">
+                            <i class="fa-solid fa-heart"></i>
+                        </div>
+                    </div>
+                    <div class="card-footer">
+                        <p class="brand txt-s">Levi's</p>
+                        <p class="name bold">RELAXED FIT TEE UNISEX</p>
+                        <span class="new-price bold txt-s">14,99€</span>
+                        <span class="orig-price txt-s">29,99€</span>
                     </div>
                 </div>
-
-
+                <div class="col">
+                    <div class="card">
+                        <img src="img/4.webp" alt="img.4">
+                        <div class="badge">
+                            <span class="discount bold-white">-50%</span>
+                            <span class="sust bold-white">Sostenibilità</span>
+                        </div>
+                        <div class="favourite">
+                            <i class="fa-solid fa-heart"></i>
+                        </div>
+                    </div>
+                    <div class="card-footer">
+                        <p class="brand txt-s">Levi's</p>
+                        <p class="name bold">RELAXED FIT TEE UNISEX</p>
+                        <span class="new-price bold txt-s">14,99€</span>
+                        <span class="orig-price txt-s">29,99€</span>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card">
+                        <img src="img/5.webp" alt="img.6">
+                        <div class="badge">
+                            <span class="discount bold-white">-50%</span>
+                            <span class="sust bold-white">Sostenibilità</span>
+                        </div>
+                        <div class="favourite">
+                            <i class="fa-solid fa-heart"></i>
+                        </div>
+                    </div>
+                    <div class="card-footer">
+                        <p class="brand txt-s">Levi's</p>
+                        <p class="name bold">RELAXED FIT TEE UNISEX</p>
+                        <span class="new-price bold txt-s">14,99€</span>
+                        <span class="orig-price txt-s">29,99€</span>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card">
+                        <img src="img/6.webp" alt="img.6">
+                        <div class="badge">
+                            <span class="discount bold-white">-50%</span>
+                            <span class="sust bold-white">Sostenibilità</span>
+                        </div>
+                        <div class="favourite">
+                            <i class="fa-solid fa-heart"></i>
+                        </div>
+                    </div>
+                    <div class="card-footer">
+                        <p class="brand txt-s">Levi's</p>
+                        <p class="name bold">RELAXED FIT TEE UNISEX</p>
+                        <span class="new-price bold txt-s">14,99€</span>
+                        <span class="orig-price txt-s">29,99€</span>
+                    </div>
+                </div>
 
             </div>
         </div>
