Added 2nd image

--- a/index.html
+++ b/index.html
@@ -44,7 +44,8 @@
             <div class="row flex">
                 <div class="col">
                     <div class="card">
-                        <img src="img/1.webp" alt="img.1">
+                        <img class="first-img" src="img/1.webp" alt="img.1">
+                        <img class="second-img" src="img/1b.webp" alt="img.1b">
                         <div class="badge">
                             <span class="discount bold-white">-50%</span>
                             <span class="sust bold-white">Sostenibilità</span>
