--- a/index.html
+++ b/index.html
@@ -63,7 +63,44 @@
                 </div>
                 <div class="col">
                     <div class="card">
-                        <img src="img/2.webp" alt="img.2">
+                        <img class="first-img" src="img/2.webp" alt="img.2">
+                        <img class="second-img" src="img/2b.webp" alt="img.2b">
+                        <div class="badge">
+                            <span class="discount bold-white">-30%</span>
+                        </div>
+                        <div class="favourite">
+                            <i class="fa-solid fa-heart"></i>
+                        </div>
+                    </div>
+                    <div class="card-footer">
+                        <p class="brand txt-s">Guess</p>
+                        <p class="name bold">ROSES TEE</p>
+                        <span class="new-price bold txt-s">20,99€</span>
+                        <span class="orig-price txt-s">29,99€</span>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card">
+                        <img class="first-img" src="img/3.webp" alt="img.3">
+                        <img class="second-img" src="img/3b.webp" alt="img.3b">
+                        <div class="badge">
+                            <span class="discount bold-white">-30%</span>
+                        </div>
+                        <div class="favourite">
+                            <i class="fa-solid fa-heart"></i>
+                        </div>
+                    </div>
+                    <div class="card-footer">
+                        <p class="brand txt-s">Come Zucchero Filato</p>
+                        <p class="name bold">BOGLIA DI COLORI PASTELLO</p>
+                        <span class="new-price bold txt-s">129,99€</span>
+                        <span class="orig-price txt-s">,99€</span>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card">
+                        <img class="first-img" src="img/4.webp" alt="img.4">
+                        <img class="second-img" src="img/4b.webp" alt="img.4b">
                         <div class="badge">
                             <span class="discount bold-white">-50%</span>
                             <span class="sust bold-white">Sostenibilità</span>
@@ -74,32 +111,34 @@
                     </div>
                     <div class="card-footer">
                         <p class="brand txt-s">Levi's</p>
-                        <p class="name bold">RELAXED FIT TEE UNISEX</p>
+                        <p class="name bold">TEE UNISEX</p>
                         <span class="new-price bold txt-s">14,99€</span>
                         <span class="orig-price txt-s">29,99€</span>
                     </div>
                 </div>
                 <div class="col">
                     <div class="card">
-                        <img src="img/3.webp" alt="img.3">
+                        <img class="first-img" src="img/5.webp" alt="img.5">
+                        <img class="second-img" src="img/5b.webp" alt="img.5b">
                         <div class="badge">
-                            <span class="discount bold-white">-50%</span>
-                            <span class="sust bold-white">Sostenibilità</span>
+                            <!-- <span class="discount bold-white">-50%</span>
+                            <span class="sust bold-white">Sostenibilità</span> -->
                         </div>
                         <div class="favourite">
                             <i class="fa-solid fa-heart"></i>
                         </div>
                     </div>
                     <div class="card-footer">
-                        <p class="brand txt-s">Levi's</p>
-                        <p class="name bold">RELAXED FIT TEE UNISEX</p>
-                        <span class="new-price bold txt-s">14,99€</span>
-                        <span class="orig-price txt-s">29,99€</span>
+                        <p class="brand txt-s">Maya Deluxe</p>
+                        <p class="name bold">STRIPE BODICE</p>
+                        <span class="new-price bold txt-s">99,99€</span>
+                        <!-- <span class="orig-price txt-s">29,99€</span> -->
                     </div>
                 </div>
                 <div class="col">
                     <div class="card">
-                        <img src="img/4.webp" alt="img.4">
+                        <img class="first-img" src="img/6.webp" alt="img.6">
+                        <img class="second-img" src="img/6b.webp" alt="img.6b">
                         <div class="badge">
                             <span class="discount bold-white">-50%</span>
                             <span class="sust bold-white">Sostenibilità</span>
@@ -109,48 +148,13 @@
                         </div>
                     </div>
                     <div class="card-footer">
-                        <p class="brand txt-s">Levi's</p>
-                        <p class="name bold">RELAXED FIT TEE UNISEX</p>
-                        <span class="new-price bold txt-s">14,99€</span>
-                        <span class="orig-price txt-s">29,99€</span>
+                        <p class="brand txt-s">Esprit</p>
+                        <p class="name bold">MAGLIONE - BLACK</p>
+                        <span class="new-price bold txt-s">29,99€</span>
+                        <!-- <span class="orig-price txt-s">29,99€</span> -->
                     </div>
                 </div>
-                <div class="col">
-                    <div class="card">
-                        <img src="img/5.webp" alt="img.6">
-                        <div class="badge">
-                            <span class="discount bold-white">-50%</span>
-                            <span class="sust bold-white">Sostenibilità</span>
-                        </div>
-                        <div class="favourite">
-                            <i class="fa-solid fa-heart"></i>
-                        </div>
-                    </div>
-                    <div class="card-footer">
-                        <p class="brand txt-s">Levi's</p>
-                        <p class="name bold">RELAXED FIT TEE UNISEX</p>
-                        <span class="new-price bold txt-s">14,99€</span>
-                        <span class="orig-price txt-s">29,99€</span>
-                    </div>
-                </div>
-                <div class="col">
-                    <div class="card">
-                        <img src="img/6.webp" alt="img.6">
-                        <div class="badge">
-                            <span class="discount bold-white">-50%</span>
-                            <span class="sust bold-white">Sostenibilità</span>
-                        </div>
-                        <div class="favourite">
-                            <i class="fa-solid fa-heart"></i>
-                        </div>
-                    </div>
-                    <div class="card-footer">
-                        <p class="brand txt-s">Levi's</p>
-                        <p class="name bold">RELAXED FIT TEE UNISEX</p>
-                        <span class="new-price bold txt-s">14,99€</span>
-                        <span class="orig-price txt-s">29,99€</span>
-                    </div>
-                </div>
+
 
             </div>
         </div>
