--- a/index.html
+++ b/index.html
@@ -92,9 +92,9 @@
                     </div>
                     <div class="card-footer">
                         <p class="brand txt-s">Come Zucchero Filato</p>
-                        <p class="name bold">BOGLIA DI COLORI PASTELLO</p>
+                        <p class="name bold">VOGLIA DI COLORI PASTELLO</p>
                         <span class="new-price bold txt-s">129,99€</span>
-                        <span class="orig-price txt-s">,99€</span>
+                        <span class="orig-price txt-s">149,99€</span>
                     </div>
                 </div>
                 <div class="col">
@@ -140,7 +140,7 @@
                         <img class="first-img" src="img/6.webp" alt="img.6">
                         <img class="second-img" src="img/6b.webp" alt="img.6b">
                         <div class="badge">
-                            <span class="discount bold-white">-50%</span>
+
                             <span class="sust bold-white">Sostenibilità</span>
                         </div>
                         <div class="favourite">
